# TLS_filetransfer_computer_security

./: README.md
CS165-TLSCache/TLSCache-master/TLSCache-master/certificates/: chain.pem  client.crt  client.key  root.pem  server.crt  server.key
CS165-TLSCache/TLSCache-master/TLSCache-master/certificates/root/: index.txt
CS165-TLSCache/TLSCache-master/TLSCache-master/certificates/root/certs/: ca.cert.pem
CS165-TLSCache/TLSCache-master/TLSCache-master/certificates/root/newcerts/: 1000.pem
CS165-TLSCache/TLSCache-master/TLSCache-master/certificates/root/private/: ca.key.pem
CS165-TLSCache/TLSCache-master/TLSCache-master/solution/: CMakeLists.txt
CS165-TLSCache/TLSCache-master/TLSCache-master/solution/client_solution/: client.c
CS165-TLSCache/TLSCache-master/TLSCache-master/solution/proxy/: proxy.c
CS165-TLSCache/TLSCache-master/TLSCache-master/solution/server_solution/: server.c
CS165-TLSCache/TLSCache-master/TLSCache-master/solution/testing_files/: test1.txt  test2.txt  test3.txt
certificates/: chain.pem  client.crt  client.key  server.crt  server.key
certificates/root/: index.txt
certificates/root/certs/: ca.cert.pem
certificates/root/private/: ca.key.pem
